# AvmOperation

./: .coveragerc  .editorconfig  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  example.py  pyproject.toml  setup.cfg  setup.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: releases.yml  test.yml
