[bdist_wheel]
universal = 0

[metadata]
name = avmoperation
description = Azure VM operations with webhook notifications
long_description = file: README.md
long_description_content_type = text/markdown
author = Hoverhuang
url = https://github.com/Hoverhuang-er/AvmOperation
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
project_urls =
    Documentation = https://github.com/Hoverhuang-er/AvmOperation#readme
    Source = https://github.com/Hoverhuang-er/AvmOperation
    Bug Tracker = https://github.com/Hoverhuang-er/AvmOperation/issues

[options]
packages = find:
python_requires = >=3.11
install_requires =
    requests>=2.31.0
    azure-identity>=1.15.0
    azure-mgmt-compute>=30.0.0

[options.packages.find]
exclude =
    tests*
    docs*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    ruff>=0.1.0
    mypy>=1.0.0
